# telegramLittleLettersBotRs

./: Cargo.toml  config.toml
docs/: README.md
src/: main.rs
src/little_letters/: mod.rs
src/logging/: mod.rs
